...
        android:layout_height="wrap_content"
        android:text="Create your account."
        android:alpha="0.7"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
...
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="Password"
        android:textColorHint="@color/white"
        android:textAlignment="textStart"
        android:layout_below="@+id/email"
        android:id="@+id/password"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="Confirm Password"
        android:textColorHint="@color/white"
        android:textAlignment="textStart"
        android:layout_below="@+id/password"
        android:id="@+id/password_confirm"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        />

    <Button
        android:backgroundTint="#1D2865"
        android:text="Sign Up"
        android:id="@+id/button_signup"
        android:layout_below="@+id/password_confirm"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
...
