...
        android:gravity="center"
        android:text="Please Enter Details."
        android:textColor="@color/white"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
...
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="Last Name"
        android:textColorHint="@color/white"
        android:textAlignment="textStart"
        android:layout_below="@+id/first_name"
        android:id="@+id/last_name"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="Bio..."
        android:textColorHint="@color/white"
        android:textAlignment="textStart"
        android:layout_below="@+id/last_name"
        android:id="@+id/bio"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        />


    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/bio"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="35dp"
        android:backgroundTint="#1D2865"
        android:text="SAVE"
        android:textSize="20dp" />

</RelativeLayout>
