...
        android:layout_width="match_parent"
        android:layout_height="70dp"
        />

    <Button
        android:backgroundTint="@color/black"
        android:text="REGISTER NOW"
        android:id="@+id/button_register1"
        android:layout_below="@+id/button_login1"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
...
